# EmbedIDS-blog

./: .gitignore  404.html  CNAME  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
docs/: .authors.yml  index.md
docs/overrides/: main.html
docs/posts/test/: hello.md
search/: search_index.json
