[project]
name = "embedids-blog"
version = "0.1.0"
description = "Modern Intrusion Detection System (IDS) for Embedded Systems"
authors = [
    {name = "Amir Alavi",email = "seydamir@gmail.com"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "mkdocs-material[imaging] (>=9.6.15,<10.0.0)",
    "mkdocs-rss-plugin (>=1.17.3,<2.0.0)",
    "mkdocs-git-revision-date-localized-plugin (>=1.4.7,<2.0.0)",
    "mkdocs-git-committers-plugin-2 (>=2.5.0,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
